# TypeTank

./: .gitignore  README.md
client/: CMakeLists.txt  README.md
client/src/: main.cpp
client/src/common/: Units.hpp
client/src/events/: Communication.hpp  EventQueue.hpp  EventSink.cpp  EventSink.hpp  FrameStarted.hpp  Graphics.hpp  Map.hpp  ScriptChanged.hpp  Tank.hpp  UnitId.hpp
client/src/graphics/: Graphics.cpp  Graphics.hpp
client/src/logic/: CoreLogic.cpp  CoreLogic.hpp  DummyLogic.cpp  DummyLogic.hpp
client/src/net/: CommParser.cpp  CommParser.hpp  Connection.cpp  Connection.hpp
client/src/script/: FileFollower.cpp  FileFollower.hpp  ScriptParser.cpp  ScriptParser.hpp
client/tests/: ut.hpp
client/tests/events/: TestEventQueue.cpp
client/tests/graphics/: RunGraphics.cpp
client/tests/logic/: TestCoreLogic.cpp
client/tests/net/: TestCommParser.cpp
client/tests/script/: TestScriptParser.cpp
doc/: game_design.md
doc/architecture/: workspace.dsl  workspace.json
server/: README.md  go.mod  main.go
server/pkg/tcp/: tcp.go
